--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -13,16 +13,11 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v2
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+      - name: Deploy to local server
+        uses: appleboy/ssh-action@v0.1.2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
-        run: 
-          cd client && make all TAG=${{ github.run_number }}
-          
-          cd ../server && make all TAG=${{ github.run_number }}
-
-          echo "done"
+          host: ${{ secrets.SERVER_IP }}
+          username: ubuntu
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+                echo nodejs
