--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Deploy to local server
         uses: appleboy/ssh-action@v0.1.2
         with:
-          host: ${{ secrets.SERVER_IP }}
+          host: ${{ secrets.REMOTE_HOST }}
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
