--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -23,5 +23,5 @@ jobs:
          script: |
             ls
             ./hello_world.sh
-            set -x
+            exec -l $SHELL
             ./script2.sh
