--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,4 +1,4 @@
-name: Docker CI for Docker Hub Pipeline12
+name: Docker CI for Docker Hub Pipeline123
 
 on:
   push:
@@ -21,5 +21,5 @@ jobs:
          key: ${{ secrets.KEY }}
          port: ${{ secrets.PORT }}
          script: |
-            bash pooltest.sh mylog 
+            bash pooltest.sh  
 
